--- a/wp-content/themes/marchebe/templates/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/_header.html.twig
@@ -199,7 +199,7 @@
     }">
     <!-- Skip to main content link for accessibility -->
     <a href="#main-content"
-       class="sr-only focus:not-sr-only focus:absolute focus:top-0 focus:left-0 focus:z-50 focus:bg-blue-600 focus:text-white focus:p-4 focus:m-2 focus:rounded">
+       class="sr-only focus:not-sr-only focus:absolute focus:top-0 focus:left-0 focus:z-50 focus:bg-cta-dark focus:text-white focus:p-4 focus:m-2 focus:rounded">
         Aller au contenu principal
     </a>
 
