--- a/wp-content/themes/marchebe/templates/article/_body.html.twig
+++ b/wp-content/themes/marchebe/templates/article/_body.html.twig
@@ -1,5 +1,5 @@
 <div class="prose max-w-none prose-lg prose-slate
-            prose-a:text-blue-600 prose-a:underline-offset-2 hover:prose-a:text-blue-800 hover:prose-a:underline
+            prose-a:text-cta-dark prose-a:underline-offset-2 hover:prose-a:text-cta-light hover:prose-a:underline
             prose-li:marker:text-cta-dark
             prose-ul:space-y-1
             prose-headings:text-cta-dark
