--- a/wp-content/themes/marchebe/templates/article/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/article/_header.html.twig
@@ -1,7 +1,7 @@
 <header class="relative  w-full overflow-hidden {% if thumbnail %} h-[35vh] md:h-[50vh] {% else %} h-[8vh] md:h-[12vh] {% endif %}"
         title="">
     <!-- Background Image -->
-    <div class="absolute inset-0 bg-blue-50">
+    <div class="absolute inset-0 bg-slate-100">
         {% if thumbnail %}
             <img src="{{ thumbnail }}"
                  {% if thumbnail_srcset %}srcset="{{ thumbnail_srcset }}"{% endif %}
@@ -13,5 +13,5 @@
     </div>
 
     <!-- Dark Overlay -->
-    <div class="absolute inset-0 {% if thumbnail %}bg-black/50{% else %}bg-blue-50{% endif %}"></div>
+    <div class="absolute inset-0 {% if thumbnail %}bg-black/50{% else %}bg-slate-100{% endif %}"></div>
 </header>
