--- a/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
+++ b/wp-content/themes/marchebe/templates/footer/_bottom_navigation.html.twig
@@ -6,8 +6,8 @@
             <button
                     @click="toggleMobileMenu()"
                     type="button"
-                    class="icon-menu-mobile cursor-pointer hover:text-blue-400 transition-colors w-full"
-                    :class="{ 'text-blue-400': isMobileMenuOpen }"
+                    class="icon-menu-mobile cursor-pointer hover:text-cta-light transition-colors w-full"
+                    :class="{ 'text-cta-light': isMobileMenuOpen }"
                     :aria-expanded="isMobileMenuOpen"
                     aria-label="Ouvrir le menu">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -21,7 +21,7 @@
         <li class="">
             <a
                     href="https://marche-auth.guichet-citoyen.be/"
-                    class="icon-menu-mobile hover:text-blue-400 transition-colors"
+                    class="icon-menu-mobile hover:text-cta-light transition-colors"
             >
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="w-6 h-6">
@@ -34,7 +34,7 @@
         <li class="">
             <a
                     href="/actualites/"
-                    class="icon-menu-mobile hover:text-blue-400 transition-colors text-base">
+                    class="icon-menu-mobile hover:text-cta-light transition-colors text-base">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor"
                      class="w-6 h-6">
@@ -47,7 +47,7 @@
         <li class="">
             <a
                     href="/administration/?p=277"
-                    class="icon-menu-mobile hover:text-blue-400 transition-colors">
+                    class="icon-menu-mobile hover:text-cta-light transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                      stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round"
