--- a/wp-content/themes/marchebe/templates/index.html.twig
+++ b/wp-content/themes/marchebe/templates/index.html.twig
@@ -5,7 +5,7 @@
             {% include '@AcMarche/article/_title.html.twig' %}
         </article>
     </div>
-    <section class="mx-auto p-8 bg-blue-50">
+    <section class="mx-auto p-8 bg-slate-50">
         <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-2 list-none">
             {% for child in children %}
                 <li>
