--- a/wp-content/themes/marchebe/templates/article/_see_also.html.twig
+++ b/wp-content/themes/marchebe/templates/article/_see_also.html.twig
@@ -13,7 +13,7 @@
                         <p class="text-sm text-gray-500 mb-1">
                             {{ event.shortCutDateEvent["day"] }} {{ event.shortCutDateEvent["month"] }} {{ event.shortCutDateEvent["year"] }}
                         </p>
-                        <h3 class="font-bold text-lg text-gray-900 group-hover:text-blue-600 transition-colors">
+                        <h3 class="font-bold text-lg text-gray-900 group-hover:text-cta-dark transition-colors">
                             {{ event.nom }}
                         </h3>
                     </div>
