--- a/wp-content/themes/marchebe/templates/article/_tags.html.twig
+++ b/wp-content/themes/marchebe/templates/article/_tags.html.twig
@@ -2,7 +2,7 @@
     {% for tag in tags %}
         <a
                 href="{{ tag.url }}"
-                class="inline-block bg-blue-100 text-cta-brown text-xs font-semibold px-3 py-1 rounded-full uppercase  hover:bg-blue-200 transition-colors">
+                class="inline-block bg-slate-100 text-cta-brown text-xs font-semibold px-3 py-1 rounded-full uppercase hover:bg-slate-200 transition-colors">
             {{ tag.name }}
         </a>
     {% endfor %}
