--- a/wp-content/themes/marchebe/templates/homepage/_form_search.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_form_search.html.twig
@@ -13,13 +13,13 @@
           type="search"
           autocomplete="off"
           placeholder="Que cherchez-vous ?"
-          class="w-full py-3 pl-12 pr-16 md:pr-32 text-gray-900 placeholder:text-gray-700 bg-white rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-blue-600 transition-shadow"
+          class="w-full py-3 pl-12 pr-16 md:pr-32 text-gray-900 placeholder:text-gray-700 bg-white rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-cta-dark transition-shadow"
       >
 
       <!-- Submit Button -->
       <button
           type="submit"
-          class="cursor-pointer absolute inset-y-0 right-0 flex items-center px-4 md:px-6 bg-cta-dark text-white font-semibold rounded-r-full hover:bg-cta-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors"
+          class="cursor-pointer absolute inset-y-0 right-0 flex items-center px-4 md:px-6 bg-cta-dark text-white font-semibold rounded-r-full hover:bg-cta-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cta-dark transition-colors"
           aria-label="Rechercher"
           aria-roledescription="Search button"
       >
