--- a/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
+++ b/wp-content/themes/marchebe/templates/navigation/_social_icons.html.twig
@@ -9,7 +9,7 @@
         </button>
     </li>
     <li class="hidden">
-        <button class="hidden text-gray-600 text-xl hover:text-blue-400  transition-colors"
+        <button class="hidden text-gray-600 text-xl hover:text-cta-light  transition-colors"
                 aria-label="Menu"
                 type="button">
             <i class="fas fa-bars" aria-hidden="true"></i>
@@ -17,21 +17,21 @@
     </li>
     <li>
         <a href="https://www.facebook.com/VilledeMarcheenFamenne"
-           class="text-xl hover:text-blue-400 transition-colors"
+           class="text-xl hover:text-cta-light transition-colors"
            aria-label="Suivez-nous sur Facebook">
             <i class="fab fa-facebook-f" aria-hidden="true"></i>
         </a>
     </li>
     <li>
         <a href="https://www.instagram.com/villedemarche/"
-           class="text-xl hover:text-blue-400 transition-colors"
+           class="text-xl hover:text-cta-light transition-colors"
            aria-label="Suivez-nous sur Instagram">
             <i class="fab fa-instagram" aria-hidden="true"></i>
         </a>
     </li>
     <li>
         <a href="https://www.youtube.com/user/VilledeMarche"
-           class="text-xl hover:text-blue-400 transition-colors"
+           class="text-xl hover:text-cta-light transition-colors"
            aria-label="Suivez-nous sur YouTube">
             <i class="fab fa-youtube" aria-hidden="true"></i>
         </a>
